fixing globals to add the proper animations, about section transparent bg, header proper z-index, and hero transparent and z-index

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -30,3 +30,7 @@ a {
 .animate-3 {
   animation-delay: 800ms;
 }
+
+.animate-4 {
+  animation-delay: 1000ms;
+}
